--- a/assets/www/pages/capture.html
+++ b/assets/www/pages/capture.html
@@ -53,7 +53,7 @@
 						            { fileName: name });   
 						    }
 						}
-    
+    videoControl._init();
 				</script>
         </head>  
         <body id="bdy" > 
